--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="menu-container">
             <h1>Select a Category</h1>
             <div id="categories-container">
+		<button class="category" data-category="EE 4 super">EE 4 super</button>
                 <button class="category" data-category="ESAS SUPER 3">ESAS SUPER 3</button>
 		<button class="category" data-category="EE SUPER 3">EE SUPER 3</button>
             </div>
